--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,python
 
 # personal ignore
+faces-detection-strongsort
+wider-face-pascal-voc-annotations
+mmdetection
 
 # for pretrain tracking weights
 pretrained_weight__mmtracking/*
@@ -14,6 +17,9 @@ pretrained_weight/*
 data/*
 _data/
 streamlit_output/*
+mmtracking/data
+mmtracking/work_dirs
+mmtracking/*.txt
 
 # for results
 result/*
