--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,python
 
 # personal ignore
+mmdetection
+mmtracking/work_dirs
+mmtracking/*.txt
 
 # for pretrain tracking weights
 pretrained_weight__mmtracking/*
