--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 
 # personal ignore
 
+# sangheon
+visualization/sampled_bbox_img
+improve_body/*
+
 # for pretrain tracking weights
 pretrained_weight__mmtracking/*
 
