--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ mmtracking/data/*
 # sangheon
 visualization/sampled_bbox_img
 improve_body/*
+result_test/*
+*.zip
 
 # for pretrain tracking weights
 pretrained_weight__mmtracking/*
