--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ mmdetection
 mmtracking/work_dirs
 mmtracking/*.txt
 mmtracking/data/*
-
+video_generator/aespa_ninging
 # sangheon
 visualization/sampled_bbox_img
 improve_body/*
