--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ mmtracking/data/*
 # sangheon
 visualization/sampled_bbox_img
 improve_body/*
+body_embedding/data/*
+body_embedding/torchreid_bpbreid/*
+train_osnet
 
 # for pretrain tracking weights
 pretrained_weight__mmtracking/*
